@@ -4,15 +4,14 @@ import db.querystates.QueryAfterSelect;
 import db.querystates.QueryUtils;
 import lombok.AllArgsConstructor;
 
-import java.util.Arrays;
+import java.util.List;
 
 @AllArgsConstructor
 public class DatasourceService {
 
-    private QueryUtils queryUtils;
+    private final QueryUtils queryUtils;
 
-
-    public QueryAfterSelect select(String... fieldsToFetch){
-        return QueryAfterSelect.of(Arrays.asList(fieldsToFetch));
+    public QueryAfterSelect select(String... fieldsToFetch) {
+        return QueryAfterSelect.of(queryUtils, List.of(fieldsToFetch));
     }
 }
